--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -1,3 +1,4 @@
 {
-  "message.config-reloaded": "Configuration file reloaded."
+  "message.config-reloaded": "Configuration file reloaded.",
+  "message.inventory-full": "Your inventory is full."
 }
