dropdown menu for setting fish quality

--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -1,4 +1,10 @@
 {
+  "config.quality-any": "Any",
+  "config.quality-none": "None",
+  "config.quality-silver": "Silver",
+  "config.quality-gold": "Gold",
+  "config.quality-iridium": "Iridium",
+
   "message.config-reloaded": "Configuration file reloaded.",
   "message.inventory-full": "Your inventory is full."
 }
