--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -35,20 +35,18 @@
   "config.attachments.override-attachment-limit.tooltip": "Overrides the fishing rod's attachment limit when spawning bait and tackle.",
   "config.attachments.reset-attachments.name": "Reset Attachments",
   "config.attachments.reset-attachments.tooltip": "Resets spawned attachments and slots when fishing rod is unequipped.",
+  "config.attachments.infinite-bait-and-tackle.name": "Infinite Bait and Tackle",
+  "config.attachments.infinite-bait-and-tackle.tooltip": "Never run out of bait and tackles.",
   "config.attachments.bait-section": "Bait",
   "config.attachments.spawn-bait-when-equipped.name": "Spawn Bait When Equipped",
   "config.attachments.spawn-bait-when-equipped.tooltip": "Spawns the below selected bait item whenever you equip your fishing rod.",
   "config.attachments.spawn-which-bait.name": "Bait to Spawn",
   "config.attachments.spawn-which-bait.tooltip": "Which bait to automatically spawn when fishing rod is equipped.",
-  "config.attachments.infinite-bait.name": "Infinite Bait",
-  "config.attachments.infinite-bait.tooltip": "Never run out of bait.",
   "config.attachments.tackles-section": "Tackles",
   "config.attachments.spawn-tackle-when-equipped.name": "Spawn Tackle When Equipped",
   "config.attachments.spawn-tackle-when-equipped.tooltip": "Spawns the below selected tackle item whenever you equip your fishing rod.",
   "config.attachments.spawn-which-tackle.name": "Tackle to Spawn",
   "config.attachments.spawn-which-tackle.tooltip": "Which tackle to automatically spawn when fishing rod is equipped.",
-  "config.attachments.infinite-tackle.name": "Infinite Tackle",
-  "config.attachments.infinite-tackle.tooltip": "Tackle never wears out.",
 
   "config.enchantments.page-title": "Enchantments",
   "config.enchantments.general-section": "General",
