configurable number of fish caught, also actually somewhat properly fix challenge bait and wild bait this time

--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -13,8 +13,8 @@
   "config.general.always-perfect.tooltip": "Always get a perfect after catching a fish, even if you did not.",
   "config.general.treasure-appearance.name": "Treasure Appearance Rate",
   "config.general.treasure-appearance.tooltip": "Adjust how often treasure chests appear when catching fish.",
-  "config.general.always-catch-double.name": "Always Catch Double",
-  "config.general.always-catch-double.tooltip": "Always catches double fish, even if you did not have the correct bait.",
+  "config.general.number-of-fish-caught.name": "Amount of Fish",
+  "config.general.number-of-fish-caught.tooltip": "Catch the set amount of fish. Using bait may override this amount. Whichever is highest.",
   "config.general.instant-bite.name": "Instant Bite",
   "config.general.instant-bite.tooltip": "Fish instantly bite after casting your fishing rod.",
   "config.general.auto-hook.name": "Automatically Hook",
