--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -7,10 +7,6 @@
   "config.general.instant-catch-fish.tooltip": "Skips the fishing minigame.",
   "config.general.instant-catch-treasure.name": "Instantly Catch Treasure",
   "config.general.instant-catch-treasure.tooltip": "If there are any treasures in the fishing minigame, instantly catch them even if you missed them.",
-  "config.general.always-max-casting-power.name": "Always Max Casting Power",
-  "config.general.always-max-casting-power.tooltip": "Always casts the fishing rod with maximum power, no matter how long you held the button.",
-  "config.general.always-perfect.name": "Always Perfect",
-  "config.general.always-perfect.tooltip": "Always get a perfect after catching a fish, even if you did not.",
   "config.general.treasure-appearance.name": "Treasure Appearance Rate",
   "config.general.treasure-appearance.tooltip": "Adjust how often treasure chests appear when catching fish.",
   "config.general.number-of-fish-caught.name": "Amount of Fish",
@@ -21,13 +17,20 @@
   "config.general.auto-hook.tooltip": "Automatically starts reeling in your fish after one bites.",
   "config.general.auto-loot-treasure.name": "Automatically Loot Treasure",
   "config.general.auto-loot-treasure.tooltip": "Automatically loot and close the treasure menu popup after catching treasure.",
+  "config.general.difficulty-section": "Difficulty",
   "config.general.difficulty-multiplier.name": "Difficulty Multiplier",
   "config.general.difficulty-multiplier.tooltip": "Value with which the standard fishing difficulty is multiplied.",
-  "config.general.quality-section": "Quality Options",
-  "config.general.fish-quality.name": "Set Fish Quality",
-  "config.general.fish-quality.tooltip": "Always catch fish with the set quality. Trumps the minimum fish quality option.",
+  "config.general.adjust-xp-gain-difficulty.name": "Adjust XP Gain",
+  "config.general.adjust-xp-gain-difficulty.tooltip": "Adjust the XP gained based on the fish difficulty set above.",
+  "config.general.always-max-casting-power.name": "Always Max Casting Power",
+  "config.general.always-max-casting-power.tooltip": "Always casts the fishing rod with maximum power, no matter how long you held the button.",
+  "config.general.always-perfect.name": "Always Perfect",
+  "config.general.always-perfect.tooltip": "Always get a perfect after catching a fish, even if you did not.",
+  "config.general.quality-section": "Quality",
   "config.general.minimum-fish-quality.name": "Minimum Fish Quality",
-  "config.general.minimum-fish-quality.tooltip": "Always gets fish of the set quality or better. Trumped by the fish quality option.",
+  "config.general.minimum-fish-quality.tooltip": "Always gets fish of the set quality or better. Trumps the fish quality option.",
+  "config.general.fish-quality.name": "Set Fish Quality",
+  "config.general.fish-quality.tooltip": "Always catch fish with the set quality.",
 
   "config.attachments.page-title": "Attachments",
   "config.attachments.general-section": "General",
