make catch fish retries a bool so it's more user friendly

--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -1,8 +1,8 @@
 {
   "config.general.page-title": "General",
   "config.general.general-section": "General",
-  "config.general.catch-fish-retries.name": "Catch Fish Retries",
-  "config.general.catch-fish-retries.tooltip": "How many times the mod will attempt to catch a fish instead of junk.",
+  "config.general.increase-chance-of-fish.name": "Increase Chance of Fish",
+  "config.general.increase-chance-of-fish.tooltip": "Tremendously increases the chance of catching fish. Only works in locations where you can catch fish (so not the farm). May cause performance issues!",
   "config.general.instant-catch-fish.name": "Instantly Catch Fish",
   "config.general.instant-catch-fish.tooltip": "Skips the fishing minigame.",
   "config.general.instant-catch-treasure.name": "Instantly Catch Treasure",
