--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -3,8 +3,6 @@
   "config.general.general-section": "General",
   "config.general.increase-chance-of-fish.name": "Increase Chance of Fish",
   "config.general.increase-chance-of-fish.tooltip": "Tremendously increases the chance of catching fish. Only works in locations where you can catch fish (so not the farm). May cause performance issues!",
-  "config.general.instant-catch-fish.name": "Instantly Catch Fish",
-  "config.general.instant-catch-fish.tooltip": "Skips the fishing minigame.",
   "config.general.instant-catch-treasure.name": "Instantly Catch Treasure",
   "config.general.instant-catch-treasure.tooltip": "If there are any treasures in the fishing minigame, instantly catch them even if you missed them.",
   "config.general.treasure-appearance.name": "Treasure Appearance Rate",
@@ -17,6 +15,11 @@
   "config.general.auto-hook.tooltip": "Automatically starts reeling in your fish after one bites.",
   "config.general.auto-loot-treasure.name": "Automatically Loot Treasure",
   "config.general.auto-loot-treasure.tooltip": "Automatically loot and close the treasure menu popup after catching treasure.",
+  "config.general.minigame-section": "Fishing Minigame",
+  "config.general.skip-fishing-minigame.name": "Skip Minigame",
+  "config.general.skip-fishing-minigame.tooltip": "Skips the fishing minigame. Amount of catches required before skip can be changed below.",
+  "config.general.skip-fishing-minigame-catches-required.name": "Catches Required",
+  "config.general.skip-fishing-minigame-catches-required.tooltip": "Amount of catches required before it skips the minigame. The \"Skip Minigame\" option must be enabled for this option to function.",
   "config.general.difficulty-section": "Difficulty",
   "config.general.difficulty-multiplier.name": "Difficulty Multiplier",
   "config.general.difficulty-multiplier.tooltip": "Value with which the standard fishing difficulty is multiplied.",
@@ -28,9 +31,9 @@
   "config.general.always-perfect.tooltip": "Always get a perfect after catching a fish, even if you did not.",
   "config.general.quality-section": "Quality",
   "config.general.minimum-fish-quality.name": "Minimum Fish Quality",
-  "config.general.minimum-fish-quality.tooltip": "Always gets fish of the set quality or better. Trumps the fish quality option.",
+  "config.general.minimum-fish-quality.tooltip": "Always gets fish of the set quality or better. Trumps the \"Fish Quality\" option.",
   "config.general.fish-quality.name": "Set Fish Quality",
-  "config.general.fish-quality.tooltip": "Always catch fish with the set quality.",
+  "config.general.fish-quality.tooltip": "Always catch fish with the set quality. Trumped by the \"Minimum Fish Quality\" option.",
 
   "config.attachments.page-title": "Attachments",
   "config.attachments.general-section": "General",
