fix a bug with treasure appearance/caught and add an option to skipminigame for a chance of catching treasure if there is treasure

--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -19,9 +19,11 @@
   "config.general.skip-fishing-minigame.name": "Skip Minigame",
   "config.general.skip-fishing-minigame.tooltip": "Skips the fishing minigame. Amount of catches required before skip can be changed below.",
   "config.general.skip-fishing-minigame-catches-required.name": "Catches Required",
-  "config.general.skip-fishing-minigame-catches-required.tooltip": "Amount of catches required before it skips the minigame. The \"Skip Minigame\" option must be enabled for this option..",
+  "config.general.skip-fishing-minigame-catches-required.tooltip": "Amount of catches required before it skips the minigame. The \"Skip Minigame\" option must be enabled.",
   "config.general.skip-fishing-minigame-perfect-chance.name": "Chance of Perfect",
-  "config.general.skip-fishing-minigame-perfect-chance.tooltip": "The chance that the minigame skip causes a perfect catch. \"Always Perfect\" trumps this option. The \"Skip Minigame\" option must be enabled for this option.",
+  "config.general.skip-fishing-minigame-perfect-chance.tooltip": "The chance that the minigame skip causes a perfect catch. \"Always Perfect\" trumps this option. The \"Skip Minigame\" option must be enabled.",
+  "config.general.skip-fishing-minigame-treasure-chance.name": "Treasure Catch Chance",
+  "config.general.skip-fishing-minigame-treasure-chance.tooltip": "The chance that the skip minigame catches treasure, if there was one. \"Instant Catch Treasure\" trumps this option. The \"Skip Minigame\" option must be enabled.",
   "config.general.difficulty-section": "Difficulty",
   "config.general.difficulty-multiplier.name": "Difficulty Multiplier",
   "config.general.difficulty-multiplier.tooltip": "Value with which the standard fishing difficulty is multiplied.",
