golden treasure appearance rate

--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -3,18 +3,12 @@
   "config.general.general-section": "General",
   "config.general.increase-chance-of-fish.name": "Increase Chance of Fish",
   "config.general.increase-chance-of-fish.tooltip": "Tremendously increases the chance of catching fish. Only works in locations where you can catch fish (so not the farm). May cause performance issues!",
-  "config.general.instant-catch-treasure.name": "Instantly Catch Treasure",
-  "config.general.instant-catch-treasure.tooltip": "If there are any treasures in the fishing minigame, instantly catch them even if you missed them.",
-  "config.general.treasure-appearance.name": "Treasure Appearance Rate",
-  "config.general.treasure-appearance.tooltip": "Adjust how often treasure chests appear when catching fish.",
   "config.general.number-of-fish-caught.name": "Amount of Fish",
   "config.general.number-of-fish-caught.tooltip": "Catch the set amount of fish. Using bait may override this amount. Whichever is highest.",
   "config.general.instant-bite.name": "Instant Bite",
   "config.general.instant-bite.tooltip": "Fish instantly bite after casting your fishing rod.",
   "config.general.auto-hook.name": "Automatically Hook",
   "config.general.auto-hook.tooltip": "Automatically starts reeling in your fish after one bites.",
-  "config.general.auto-loot-treasure.name": "Automatically Loot Treasure",
-  "config.general.auto-loot-treasure.tooltip": "Automatically loot and close the treasure menu popup after catching treasure.",
   "config.general.minigame-section": "Fishing Minigame",
   "config.general.skip-fishing-minigame.name": "Skip Minigame",
   "config.general.skip-fishing-minigame.tooltip": "Skips the fishing minigame. Amount of catches required before skip can be changed below.",
@@ -38,6 +32,15 @@
   "config.general.minimum-fish-quality.tooltip": "Always gets fish of the set quality or better. Trumps the \"Fish Quality\" option.",
   "config.general.fish-quality.name": "Set Fish Quality",
   "config.general.fish-quality.tooltip": "Always catch fish with the set quality. Trumped by the \"Minimum Fish Quality\" option.",
+  "config.general.treasure-section": "Treasure",
+  "config.general.instant-catch-treasure.name": "Instantly Catch Treasure",
+  "config.general.instant-catch-treasure.tooltip": "If there are any treasures in the fishing minigame, instantly catch them even if you missed them.",
+  "config.general.treasure-appearance.name": "Treasure Probability",
+  "config.general.treasure-appearance.tooltip": "Adjust how often treasure chests appear.",
+  "config.general.golden-treasure-appearance.name": "Golden Treasure Probability",
+  "config.general.golden-treasure-appearance.tooltip": "Adjust how often a treasure chest is a golden treasure chest.",
+  "config.general.auto-loot-treasure.name": "Automatically Loot Treasure",
+  "config.general.auto-loot-treasure.tooltip": "Automatically loot and close the treasure menu popup after catching treasure.",
 
   "config.attachments.page-title": "Attachments",
   "config.attachments.general-section": "General",
