--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -50,8 +50,8 @@
   "config.attachments.general-section": "General",
   "config.attachments.override-attachment-limit.name": "Override Attachment Limit",
   "config.attachments.override-attachment-limit.tooltip": "Overrides the fishing rod's attachment limit when spawning bait and tackle.",
-  "config.attachments.reset-attachments.name": "Reset Attachments",
-  "config.attachments.reset-attachments.tooltip": "Resets spawned attachments and slots when fishing rod is unequipped.",
+  "config.attachments.reset-attachments-limit-when-not-equipped.name": "Reset Attachments Limit",
+  "config.attachments.reset-attachments-limit-when-not-equipped.tooltip": "Resets attachment limit back to the default when unequipping the fishing rod. WARNING: If you have any attachments in an overriden slot, these will be deleted.",
   "config.attachments.infinite-bait-and-tackle.name": "Infinite Bait and Tackle",
   "config.attachments.infinite-bait-and-tackle.tooltip": "Never run out of bait and tackles.",
   "config.attachments.bait-section": "Bait",
