change the increase chance of catching fish option to be more customisable - 'fixes' not being able to catch jellies

--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -1,15 +1,6 @@
 {
   "config.general.page-title": "General",
-  "config.general.general-section": "General",
-  "config.general.increase-chance-of-fish.name": "Increase Chance of Fish",
-  "config.general.increase-chance-of-fish.tooltip": "Tremendously increases the chance of catching fish. Only works in locations where you can catch fish (so not the farm). May cause performance issues!",
-  "config.general.number-of-fish-caught.name": "Amount of Fish",
-  "config.general.number-of-fish-caught.tooltip": "Catch the set amount of fish. Using bait may override this amount. Whichever is highest.",
-  "config.general.instant-bite.name": "Instant Bite",
-  "config.general.instant-bite.tooltip": "Fish instantly bite after casting your fishing rod.",
-  "config.general.auto-hook.name": "Automatically Hook",
-  "config.general.auto-hook.tooltip": "Automatically starts reeling in your fish after one bites.",
-  "config.general.minigame-section": "Fishing Minigame",
+  "config.general.minigame-section": "Minigame Skip",
   "config.general.skip-fishing-minigame.name": "Skip Minigame",
   "config.general.skip-fishing-minigame.tooltip": "Skips the fishing minigame. Amount of catches required before skip can be changed below.",
   "config.general.skip-fishing-minigame-catches-required.name": "Catches Required",
@@ -29,9 +20,19 @@
   "config.general.bar-size-multiplier.tooltip": "A multiplier for the size of the bar in the fishing minigame. The higher the value, the larger the bar.",
   "config.general.always-max-casting-power.name": "Always Max Casting Power",
   "config.general.always-max-casting-power.tooltip": "Always casts the fishing rod with maximum power, no matter how long you held the button.",
+  "config.general.auto-hook.name": "Automatically Hook",
+  "config.general.auto-hook.tooltip": "Automatically starts reeling in your fish after one bites.",
   "config.general.always-perfect.name": "Always Perfect",
   "config.general.always-perfect.tooltip": "Always get a perfect after catching a fish, even if you did not.",
-  "config.general.quality-section": "Quality",
+  "config.general.fishing-loot-section": "Fishing Loot",
+  "config.general.allow-catching-fish.name": "Fish",
+  "config.general.allow-catching-fish.tooltip": "Increases the chance of catching fish when enabled.",
+  "config.general.allow-catching-rubbish.name": "Rubbish",
+  "config.general.allow-catching-rubbish.tooltip": "Increases the chance of catching rubbish when enabled.",
+  "config.general.allow-catching-other.name": "Other",
+  "config.general.allow-catching-other.tooltip": "Increases the chance of catching other items when enabled. This includes items such as seaweed and algae.",
+  "config.general.number-of-fish-caught.name": "Amount of Fish",
+  "config.general.number-of-fish-caught.tooltip": "Catch the set amount of fish. Using bait may override this amount. Whichever is highest.",
   "config.general.minimum-fish-quality.name": "Minimum Fish Quality",
   "config.general.minimum-fish-quality.tooltip": "Always gets fish of the set quality or better. Trumps the \"Fish Quality\" option.",
   "config.general.fish-quality.name": "Set Fish Quality",
@@ -43,6 +44,9 @@
   "config.general.treasure-appearance.tooltip": "Adjust how often treasure chests appear.",
   "config.general.golden-treasure-appearance.name": "Golden Treasure Probability",
   "config.general.golden-treasure-appearance.tooltip": "Adjust how often a treasure chest is a golden treasure chest.",
+  "config.general.faster-please-section": "Faster Please",
+  "config.general.instant-bite.name": "Instant Bite",
+  "config.general.instant-bite.tooltip": "Fish instantly bite after casting your fishing rod.",
   "config.general.auto-loot-treasure.name": "Automatically Loot Treasure",
   "config.general.auto-loot-treasure.tooltip": "Automatically loot and close the treasure menu popup after catching treasure.",
 
