--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -51,6 +51,8 @@
   "config.general.auto-loot-fish.tooltip": "Automatically loot and close the fish popup after catching a fish.",
   "config.general.auto-loot-treasure.name": "Automatically Loot Treasure",
   "config.general.auto-loot-treasure.tooltip": "Automatically loot and close the treasure menu popup after catching treasure.",
+  "config.general.do-speed-up-animations.name": "Faster Animations",
+  "config.general.do-speed-up-animations.tooltip": "Various animations are quicker. These include the casting, reeling and treasure opening animations.",
 
   "config.attachments.page-title": "Attachments",
   "config.attachments.general-section": "General",
