--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -28,6 +28,10 @@
   "config.general.auto-hook.tooltip": "Automatically starts reeling in your fish after one bites.",
   "config.general.always-perfect.name": "Always Perfect",
   "config.general.always-perfect.tooltip": "Always get a perfect after catching a fish, even if you did not.",
+  "config.general.instant-catch-treasure.name": "Instantly Catch Treasure",
+  "config.general.instant-catch-treasure.tooltip": "If there are any treasures in the fishing minigame, instantly catch them even if you missed them.",
+  "config.general.treasure-in-bar-multiplier.name": "Treasure Catch Multiplier",
+  "config.general.treasure-in-bar-multiplier.tooltip": "A multiplier for the increase given when a treasure is inside the green bar. The higher the value, the quicker the treasure is caught.",
   "config.general.fishing-loot-section": "Fishing Loot",
   "config.general.allow-catching-fish.name": "Fish",
   "config.general.allow-catching-fish.tooltip": "Increases the chance of catching fish when enabled.",
@@ -41,9 +45,6 @@
   "config.general.minimum-fish-quality.tooltip": "Always gets fish of the set quality or better. Trumps the \"Fish Quality\" option.",
   "config.general.fish-quality.name": "Set Fish Quality",
   "config.general.fish-quality.tooltip": "Always catch fish with the set quality. Trumped by the \"Minimum Fish Quality\" option.",
-  "config.general.treasure-section": "Treasure",
-  "config.general.instant-catch-treasure.name": "Instantly Catch Treasure",
-  "config.general.instant-catch-treasure.tooltip": "If there are any treasures in the fishing minigame, instantly catch them even if you missed them.",
   "config.general.treasure-appearance.name": "Treasure Probability",
   "config.general.treasure-appearance.tooltip": "Adjust how often treasure chests appear.",
   "config.general.golden-treasure-appearance.name": "Golden Treasure Probability",
