--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -65,9 +65,9 @@
   "config.attachments.override-attachment-limit.tooltip": "Overrides the fishing rod's attachment limit when spawning bait and tackle.",
   "config.attachments.reset-attachments-limit-when-not-equipped.name": "Reset Attachments Limit",
   "config.attachments.reset-attachments-limit-when-not-equipped.tooltip": "Resets attachment limit back to the default when unequipping the fishing rod. WARNING: If you have any attachments in an overriden slot, these will be deleted.",
-  "config.attachments.infinite-bait-and-tackle.name": "Infinite Bait and Tackle",
-  "config.attachments.infinite-bait-and-tackle.tooltip": "Never run out of bait and tackles.",
   "config.attachments.bait-section": "Bait",
+  "config.attachments.infinite-bait.name": "Infinite Bait",
+  "config.attachments.infinite-bait.tooltip": "Never run out of bait.",
   "config.attachments.spawn-bait-when-equipped.name": "Spawn Bait When Equipped",
   "config.attachments.spawn-bait-when-equipped.tooltip": "Spawns the below selected bait item whenever you equip your fishing rod.",
   "config.attachments.amount-of-bait.name": "Amount of Bait",
@@ -75,6 +75,8 @@
   "config.attachments.spawn-which-bait.name": "Bait to Spawn",
   "config.attachments.spawn-which-bait.tooltip": "Which bait to automatically spawn when fishing rod is equipped.",
   "config.attachments.tackles-section": "Tackles",
+  "config.attachments.infinite-tackle.name": "Infinite Tackles",
+  "config.attachments.infinite-tackle.tooltip": "Your tackle never wears out.",
   "config.attachments.spawn-tackle-when-equipped.name": "Spawn Tackle When Equipped",
   "config.attachments.spawn-tackle-when-equipped.tooltip": "Spawns the below selected tackle item whenever you equip your fishing rod.",
   "config.attachments.spawn-which-tackle.name": "Tackle to Spawn",
