--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -64,7 +64,7 @@
   "config.attachments.override-attachment-limit.name": "Override Attachment Limit",
   "config.attachments.override-attachment-limit.tooltip": "Overrides the fishing rod's attachment limit when spawning bait and tackle.",
   "config.attachments.reset-attachments-limit-when-not-equipped.name": "Reset Attachments Limit",
-  "config.attachments.reset-attachments-limit-when-not-equipped.tooltip": "Resets attachment limit back to the default when unequipping the fishing rod. WARNING: If you have any attachments in an overriden slot, these will be deleted.",
+  "config.attachments.reset-attachments-limit-when-not-equipped.tooltip": "Resets attachment limit back to the default when unequipping the fishing rod. WARNING: If you have any attachments in an overriden slot, they will be deleted.",
   "config.attachments.bait-section": "Bait",
   "config.attachments.infinite-bait.name": "Infinite Bait",
   "config.attachments.infinite-bait.tooltip": "Never run out of bait.",
