--- a/NoStaminaWasted/i18n/default.json
+++ b/NoStaminaWasted/i18n/default.json
@@ -1,3 +1,25 @@
 {
-  "message.config-reloaded": "Configuration file reloaded."
+  "message.config-reloaded": "Configuration file reloaded.",
+
+  "config.stamina.consumption-section.name": "Stamina Consumption",
+  "config.stamina.consumption-section.description": "Each of the following tools is able to consume stamina on use.\nThis mod respects Efficient Tool enchantment, and allows for three modes:\n- Vanilla: Stamina gets consumed the same it does in vanilla.\n- No Accidents: Stamina does not get consumed on unsuccessful tool uses.\n- Never: Stamina does not get consumed on tool use.",
+  "config.stamina.axe-consumption.name": "Axe",
+  "config.stamina.axe-consumption.tooltip": "No Accidents will only consume stamina if you successfully hit a tree, or break something.",
+  "config.stamina.fishing-rod-consumption.name": "Fishing Rod",
+  "config.stamina.fishing-rod-consumption.tooltip": "No Accidents will only consume stamina if you cast your rod into a fishable tile.",
+  "config.stamina.hoe-consumption.name": "Hoe",
+  "config.stamina.hoe-consumption.tooltip": "No Accidents will only consume stamina if you successfully hoe dirt, or break something.",
+  "config.stamina.milk-pail-consumption.name": "Milk Pail",
+  "config.stamina.milk-pail-consumption.tooltip": "No Accidents will only consume stamina if you successfully milk an animal.",
+  "config.stamina.pickaxe-consumption.name": "Pickaxe",
+  "config.stamina.pickaxe-consumption.tooltip": "No Accidents will only consume stamina if you successfully hit something breakable.",
+  "config.stamina.shears-consumption.name": "Shears",
+  "config.stamina.shears-consumption.tooltip": "No Accidents will only consume stamina if you successfully collect wool.",
+  "config.stamina.watering-can-consumption.name": "Watering Can",
+  "config.stamina.watering-can-consumption.tooltip": "No Accidents will only consume stamina if you successfully water an unwatered tile.",
+
+
+  "config.stamina-consumption-option.vanilla": "Vanilla",
+  "config.stamina-consumption-option.noaccidents": "No Accidents",
+  "config.stamina-consumption-option.never": "Never"
 }
