--- a/YetAnotherFishingMod/i18n/default.json
+++ b/YetAnotherFishingMod/i18n/default.json
@@ -36,11 +36,11 @@
   "config.general.treasure-in-bar-multiplier.tooltip": "A multiplier for the increase given when a treasure is inside the green bar. The higher the value, the quicker the treasure is caught.",
   "config.general.fishing-loot-section": "Fishing Loot",
   "config.general.allow-catching-fish.name": "Fish",
-  "config.general.allow-catching-fish.tooltip": "Increases the chance of catching fish when enabled.",
+  "config.general.allow-catching-fish.tooltip": "Allows the catching of fish when enabled.",
   "config.general.allow-catching-rubbish.name": "Rubbish",
-  "config.general.allow-catching-rubbish.tooltip": "Increases the chance of catching rubbish when enabled.",
+  "config.general.allow-catching-rubbish.tooltip": "Allows the catching of rubbish when enabled.",
   "config.general.allow-catching-other.name": "Other",
-  "config.general.allow-catching-other.tooltip": "Increases the chance of catching other items when enabled. This includes items such as seaweed and algae.",
+  "config.general.allow-catching-other.tooltip": "Allows the catching of other items when enabled. This includes items such as seaweed and algae.",
   "config.general.number-of-fish-caught.name": "Amount of Fish",
   "config.general.number-of-fish-caught.tooltip": "Catch the set amount of fish. Using bait may override this amount. Whichever is highest.",
   "config.general.minimum-fish-quality.name": "Minimum Fish Quality",
